fix z-index background

--- a/src/Background/Background.module.scss
+++ b/src/Background/Background.module.scss
@@ -2,6 +2,7 @@
   position: absolute;
   top: 0;
   left: 0;
+  z-index: -1;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -16,6 +17,5 @@
   right: 0;
   bottom: 0;
   left: 0;
-  z-index: 0;
   background: rgb(75 75 75 / 45%);
 }
