--- a/src/Block/Block.module.scss
+++ b/src/Block/Block.module.scss
@@ -15,7 +15,4 @@
     max-width: 100%;
   }
 
-  > * {
-    z-index: 1;
-  }
 }
