--- a/src/stories/utils/CustomBackground.module.scss
+++ b/src/stories/utils/CustomBackground.module.scss
@@ -2,7 +2,7 @@
   position: absolute;
   top: 0;
   left: 0;
-  z-index: 0;
+  z-index: -1;
   background: rgb(0 0 0 / 50%);
   width: 100%;
   height: 100%;
